issue #30 sections line broken on process page

--- a/styles/pages/process.scss
+++ b/styles/pages/process.scss
@@ -102,7 +102,6 @@
 
   #process-copy{
     grid-area: copy;
-    margin-right: $medium;
     justify-self: start;
     padding-right: $medium;
     padding-left: $small;
